<resources>
    <string name="app_name">Exp7</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="add">Add</string>

    <string name="no">学号:</string>
    <string name="name">姓名:</string>
    <string name="phone">手机:</string>
    <string name="confirm">确定</string>
    
    <string name="titleAdd">添加联系人</string>
    <string name="titleModify">修改联系人</string>

    <string name="msgWarning">您输入的内容为空</string>
    <string name="msgWarning2">你输入的学号重复</string>
</resources>
