<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/item_no_width"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="@dimen/item_font_size"
            android:text="@string/no"/>
        <TextView
            android:layout_width="@dimen/item_name_width"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="@dimen/item_font_size"
            android:text="@string/name"/>
        <TextView
            android:layout_width="@dimen/item_name_width"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="@dimen/item_font_size"
            android:text="性别:"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="@dimen/item_font_size"
            android:text="@string/phone"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    </ListView>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/margin_fix"
        android:background="@color/btn_blue"
        android:text="@string/add"
        android:textSize="@dimen/btn_add_size" />

</LinearLayout>
